feat(auth): implement otp send and verify api with db table

--- a/DependencySystem/DependencySystem/appsettings.json
+++ b/DependencySystem/DependencySystem/appsettings.json
@@ -5,5 +5,23 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=3306;Database=depndacymydb;User=root;Password=yuvraj;"
+  },
+  "EmailSettings": {
+    "FromEmail": "yuvrajbaburaorathod@gmail.com",
+    "FromName": "Login OTP Service",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "yuvrajbaburaorathod@gmail.com",
+    "Password": "nrln urdp zpnx lakq"
+  },
+  "Jwt": {
+    "SecretKey": "THIS_IS_A_VERY_STRONG_SECRET_KEY_123456789abcdefghijklmnopqrstwstruvxwzq",
+    "Issuer": "AuthService",
+    "Audience": "ProjectManagementService",
+    "Key": "THIS_IS_A_DEMO_SECRET_KEY_CHANGE_IT",
+    "AccessTokenExpiryMinutes": 30
+  },
   "AllowedHosts": "*"
 }
