connection correct implement user registration api with service layer

--- a/DependencySystem/DependencySystem/appsettings.json
+++ b/DependencySystem/DependencySystem/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;Database=depndacymydb;User=root;Password=yuvraj;"
+    "DefaultConnection": "Server=.;Database=DependencySystemDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "EmailSettings": {
     "FromEmail": "yuvrajbaburaorathod@gmail.com",
