chore(db): add pomelo mysql provider

--- a/DependencySystem/DependencySystem/appsettings.json
+++ b/DependencySystem/DependencySystem/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;Database=depndacymydb;User=root;Password=yuvraj;"
+    "DefaultConnection": "Server=localhost;Port=3306;Database=depdacymydb;User=root;Password=yuvraj;"
   },
   "EmailSettings": {
     "FromEmail": "yuvrajbaburaorathod@gmail.com",
