fix(email): correct gmail app password format and smtp config

--- a/DependencySystem/DependencySystem/appsettings.json
+++ b/DependencySystem/DependencySystem/appsettings.json
@@ -8,11 +8,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=3306;Database=depdacymydb;User=root;Password=yuvraj;"
   },
-  "EmailSettings": {
-    "FromEmail": "yuvrajbaburaorathod@gmail.com",
-    "FromName": "Login OTP Service",
-    "SmtpServer": "smtp.gmail.com",
+  "SmtpSettings": {
+    "FromEmails": "yuvrajbaburaorathod@gmail.com",
+    "SenderName": "DependencySystem  Login OTP Service",
+    "Host": "smtp.gmail.com",
     "Port": 587,
+    "SenderEmail":"yuvrajbaburaorathod@gmail.com",
     "Username": "yuvrajbaburaorathod@gmail.com",
     "Password": "nrln urdp zpnx lakq"
   },
