docs(readme): add api endpoints documentation

--- a/DependencySystem/DependencySystem/appsettings.json
+++ b/DependencySystem/DependencySystem/appsettings.json
@@ -13,7 +13,7 @@
     "SenderName": "DependencySystem  Login OTP Service",
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "SenderEmail":"yuvrajbaburaorathod@gmail.com",
+    "SenderEmail": "yuvrajbaburaorathod@gmail.com",
     "Username": "yuvrajbaburaorathod@gmail.com",
     "Password": "nrln urdp zpnx lakq"
   },
@@ -24,5 +24,11 @@
     "Key": "THIS_IS_A_DEMO_SECRET_KEY_CHANGE_IT",
     "AccessTokenExpiryMinutes": 30
   },
+  "AdminSeed": {
+    "Email": "admin@dependency.com",
+    "Username": "admin",
+    "Password": "Admin@12345"
+  },
+
   "AllowedHosts": "*"
 }
