feat(seed): add demo data seeder with users projects modules tasks dependencies

--- a/DependencySystem/DependencySystem/appsettings.json
+++ b/DependencySystem/DependencySystem/appsettings.json
@@ -5,6 +5,44 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DemoUsers": {
+    "Admin": {
+      "Email": "admin@dependency.com",
+      "Username": "admin",
+      "Password": "Admin@12345"
+    },
+    "Admin1": {
+      "Email": "admin@gmail.com",
+      "Username": "admin1",
+      "Password": "Admin@12345"
+    },
+    "Manager": {
+      "Email": "manager@dependency.com",
+      "Username": "manager",
+      "Password": "Manager@12345"
+    },
+    "Developer1": {
+      "Email": "dev1@dependency.com",
+      "Username": "dev1",
+      "Password": "Dev@12345"
+    },
+    "Developer2": {
+      "Email": "dev2@dependency.com",
+      "Username": "dev2",
+      "Password": "Dev@12345"
+    },
+    "Developer3": {
+      "Email": "dev3@dependency.com",
+      "Username": "dev3",
+      "Password": "Dev@12345"
+    },
+    "Maintainer": {
+      "Email": "maintainer@dependency.com",
+      "Username": "maintainer",
+      "Password": "Main@12345"
+    }
+  },
+
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=3306;Database=depdacymydb;User=root;Password=yuvraj;"
   },
