--- a/DependencySystem/DependencySystem/appsettings.json
+++ b/DependencySystem/DependencySystem/appsettings.json
@@ -2,9 +2,26 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
+
+  "Jwt": {
+    "Issuer": "Dependency.Auth",
+    "Audience": "Dependency.Api",
+    "AccessTokenMinutes": 60,
+    "RefreshTokenDays": 7
+  },
+
+  "EmailSettings": {
+    "FromEmail": "yuvrajbaburaorathod@gmail.com",
+    "FromName": "Dependency System",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "yuvrajbaburaorathod@gmail.com"
+  },
+
   "DemoUsers": {
     "Admin": {
       "Email": "admin@dependency.com",
@@ -43,23 +60,6 @@
     }
   },
 
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;Database=depdacymydb;User=root;Password=yuvraj;"
-  },
-  "EmailSettings": {
-    "FromEmail": "yuvrajbaburaorathod@gmail.com",
-    "FromName": "Login OTP Service",
-    "SmtpServer": "smtp.gmail.com",
-    "Port": 587,
-    "Username": "yuvrajbaburaorathod@gmail.com",
-    "Password": "nrln urdp zpnx lakq"
-  },
-  "Jwt": {
-    "SecretKey": "THIS_IS_A_VERY_STRONG_SECRET_KEY_123456789abcdefghijklmnopqrstwstruvxwzq",
-    "Issuer": "AuthService",
-    "Audience": "ProjectManagementService",
-    "Key": "THIS_IS_A_DEMO_SECRET_KEY_CHANGE_IT",
-    "AccessTokenExpiryMinutes": 30
-  },
+
   "AllowedHosts": "*"
 }
