refactor: move SMTP config to .env and remove IConfiguration from EmailService

--- a/DependencySystem/DependencySystem/.env
+++ b/DependencySystem/DependencySystem/.env
@@ -1,27 +1,20 @@
-DB_CONNECTION=Server=localhost;Port=3306;Database=depdacymydb;User=root;Password=yuvraj
-JWT_KEY=super_secret_key
-SMTP_PASSWORD=nrlnurdpzpnxlakq
-
 # ============================
 # DATABASE
 # ============================
-#DB_CONNECTION=Server=localhost;Port=3306;Database=dependencydb;User=root;Password=yuvraj
+DB_CONNECTION=Server=localhost;Port=3306;Database=depdacymydb;User=root;Password=yuvraj;
 
 # ============================
 # JWT
 # ============================
-JWT_KEY=CHANGE_ME_TO_A_64_CHAR_RANDOM_SECRETasdfghjklpoiuytrewqzxcvbnm
+JWT_KEY=THIS_IS_A_VERY_STRONG_SECRET_KEY_CHANGE_IN_PROD_123456789
 
 # ============================
-# SMTP (GMAIL APP PASSWORD)
+# EMAIL (GMAIL SMTP)
 # ============================
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=yuvrajbaburaorathod@gmail.com
 SMTP_PASSWORD=nrlnurdpzpnxlakq
-
-# ============================
-# DEMO USERS (SEEDING ONLY)
-# ============================
-DEMO_ADMIN_PASSWORD=Admin@12345
-DEMO_MANAGER_PASSWORD=Manager@12345
-DEMO_DEV_PASSWORD=Dev@12345
-DEMO_MAINTAINER_PASSWORD=Main@12345
-
+SMTP_FROM_EMAIL=yuvrajbaburaorathod@gmail.com
+SMTP_FROM_NAME=DependencySystem OTP
+v
