--- a/DependencySystem/DependencySystem/DependencySystem.csproj
+++ b/DependencySystem/DependencySystem/DependencySystem.csproj
@@ -37,6 +37,7 @@
          JWT Authentication
          =============================== -->
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.23" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
 		<PackageReference Include="Remote.Linq.Newtonsoft.Json" Version="7.3.1" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.0" />
