refactor:fix bux move SMTP config to .env and remove  from EmailService

--- a/DependencySystem/DependencySystem/.env
+++ b/DependencySystem/DependencySystem/.env
@@ -11,10 +11,14 @@ JWT_KEY=THIS_IS_A_VERY_STRONG_SECRET_KEY_CHANGE_IN_PROD_123456789
 # ============================
 # EMAIL (GMAIL SMTP)
 # ============================
+
+
+
+
+
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USERNAME=yuvrajbaburaorathod@gmail.com
 SMTP_PASSWORD=nrlnurdpzpnxlakq
-SMTP_FROM_EMAIL=yuvrajbaburaorathod@gmail.com
-SMTP_FROM_NAME=DependencySystem OTP
-v
+SMTP_SENDER_EMAIL=yuvrajbaburaorathod@gmail.com
+SMTP_SENDER_NAME=Dependency System
