fix(jwt): load .env before CreateBuilder to ensure JWT_KEY availability

--- a/DependencySystem/DependencySystem/appsettings.json
+++ b/DependencySystem/DependencySystem/appsettings.json
@@ -10,9 +10,11 @@
   "Jwt": {
     "Issuer": "Dependency.Auth",
     "Audience": "Dependency.Api",
+    "Key": "",
     "AccessTokenMinutes": 60,
     "RefreshTokenDays": 7
   },
+
 
   "EmailSettings": {
     "FromEmail": "yuvrajbaburaorathod@gmail.com",
