fix(api): prevent EF Core circular reference JSON serialization

--- a/DependencySystem/DependencySystem/appsettings.json
+++ b/DependencySystem/DependencySystem/appsettings.json
@@ -7,14 +7,14 @@
     }
   },
 
-  "Jwt": {
-    "Issuer": "Dependency.Auth",
-    "Audience": "Dependency.Api",
-    "Key": "",
-    "AccessTokenMinutes": 60,
-    "RefreshTokenDays": 7
-  },
-
+ "Jwt": {
+  "Issuer": "Dependency.Auth",
+  "Audience": "Dependency.Api",
+  "Key": "ENV:JWT_KEYasdfghjklpoiuytrewq1234097456",
+  "AccessTokenMinutes": 60,
+  "RefreshTokenDays": 7
+}
+,
 
   "EmailSettings": {
     "FromEmail": "yuvrajbaburaorathod@gmail.com",
