fix(api): prevent json cycle using ReferenceHandler.IgnoreCycles

--- a/DependencySystem/DependencySystem/.env
+++ b/DependencySystem/DependencySystem/.env
@@ -13,7 +13,9 @@ JWT_KEY=mnbvcxzlkjhgfdsapoiuytrewq0987612345THIS_IS_A_VERY_STRONG_SECRET_KEY_CHA
 # ============================
 
 
-
+# ============================
+# ENVIRONMENT
+# ============================
 
 
 SMTP_HOST=smtp.gmail.com
