Completed full backend

--- a/DependencySystem/DependencySystem/appsettings.json
+++ b/DependencySystem/DependencySystem/appsettings.json
@@ -7,14 +7,12 @@
     }
   },
 
- "Jwt": {
-  "Issuer": "Dependency.Auth",
-  "Audience": "Dependency.Api",
-  "Key": "ENV:JWT_KEYasdfghjklpoiuytrewq1234097456",
-  "AccessTokenMinutes": 60,
-  "RefreshTokenDays": 7
-}
-,
+  "Jwt": {
+    "Issuer": "Dependency.Auth",
+    "Audience": "Dependency.Api",
+    "AccessTokenMinutes": 60,
+    "RefreshTokenDays": 7
+  },
 
   "EmailSettings": {
     "FromEmail": "yuvrajbaburaorathod@gmail.com",
@@ -24,44 +22,16 @@
     "Username": "yuvrajbaburaorathod@gmail.com"
   },
 
-  "DemoUsers": {
-    "Admin": {
-      "Email": "admin@dependency.com",
-      "Username": "admin",
-      "Password": "Admin@12345"
-    },
-    "Admin1": {
-      "Email": "admin@gmail.com",
-      "Username": "admin1",
-      "Password": "Admin@12345"
-    },
-    "Manager": {
-      "Email": "manager@dependency.com",
-      "Username": "manager",
-      "Password": "Manager@12345"
-    },
-    "Developer1": {
-      "Email": "dev1@dependency.com",
-      "Username": "dev1",
-      "Password": "Dev@12345"
-    },
-    "Developer2": {
-      "Email": "dev2@dependency.com",
-      "Username": "dev2",
-      "Password": "Dev@12345"
-    },
-    "Developer3": {
-      "Email": "dev3@dependency.com",
-      "Username": "dev3",
-      "Password": "Dev@12345"
-    },
-    "Maintainer": {
-      "Email": "maintainer@dependency.com",
-      "Username": "maintainer",
-      "Password": "Main@12345"
-    }
-  },
+  "RelationalSeeding": {
+    "Enable": true,
+    "DefaultUserPassword": "Admin@12345",
 
+    "Companies": 2,
+    "DepartmentsPerCompany": 5,
+    "ProjectsPerDepartment": 1,
+    "ModulesPerProject": 3,
+    "TasksPerModule": 3
+  },
 
   "AllowedHosts": "*"
 }
