Bacend Update some Opration AuditController add

--- a/DependencySystem/DependencySystem/appsettings.json
+++ b/DependencySystem/DependencySystem/appsettings.json
@@ -11,7 +11,8 @@
     "Issuer": "Dependency.Auth",
     "Audience": "Dependency.Api",
     "AccessTokenMinutes": 60,
-    "RefreshTokenDays": 7
+    "RefreshTokenDays": 7,
+    "DurationInMinutes": 100
   },
 
   "EmailSettings": {
